tests/samples/negative/resources/resource_deref_assignment.ax
module resource_deref_assignment;

fn overwrite<T>(slot: &mut T, replacement: T) -> void {
    *slot = replacement;
}

fn main() -> i32 {
    return 0;
}
